Update spotlight images; Add heróis do mar information; Add find your everything page (incomplete)

--- a/holy-hell.html
+++ b/holy-hell.html
@@ -142,9 +142,9 @@
 									</p>
 								</li>
 								<li>Marketing
-									<p> Besides the creation of posters, banners and other promotional art, I was the
+									<p> Besides the creation of posters, banners and other promotional art, I was also the
 										project's marketing manager
-										in charge of many social networks (Instagram, Twitter, IndieDB, etc) and all
+										in charge of many social networks (Instagram, Twitter, IndieDB, etc) as well as all
 										communications with the press.
 									</p>
 								</li>
