--- a/illuminants.html
+++ b/illuminants.html
@@ -121,8 +121,8 @@
 							<a href="#" class="image fit"><img src="images/projects/illuminants/banner.png"
 									alt="" /></a>
 							<h3>About The Project</h3>
-							<p>Illuminants was the first game I ever developed in Unity. My group and I worked on it for 3 months alongside with ATMU (another project of ours) and we got lots of praise from colleagues and professors just by the idea itself. We were prized the Best Videogame award by our University, competing against projects from all of our course's years. Ending my first year of game development in such a positive way made me feel extremely motivated, even more passionate about this industry and very eager for the future.
-								<br><br>We've exposed the game in multiple events in Portugal and it was really well embraced by the community.
+							<p>Illuminants was the first game I ever developed in Unity. My group and I worked on it for about 4 months alongside with ATMU (another project of ours) and we got lots of praise from colleagues and professors just by the idea itself. We were prized the Best Videogame award by our University, competing against projects from all of our course's years.
+								<br><br>We displayed the game in multiple events in Portugal and it was really well embraced by the community.
 								<br><br>Currently, we are re-developing Illuminants from scratch and intend to release it to mobile, with no determined schedule. </p>
 							<h3>My Role In The Project</h3>
 							<ul class="roles">
@@ -139,7 +139,7 @@
 								</li>
 								<li>2D Art
 									<p> I was also responsible for creating promo-art and official documents for the
-										game such as the Artbook and the Spec Sheet.
+										game like the Artbook.
 									</p>
 								</li>
 							</ul>
