--- a/index.html
+++ b/index.html
@@ -22,22 +22,26 @@
 		<section id="banner">
 			<div class="content">
 				<span class="image overlayed"><img src="images/me/me.jpg" alt="" /></span>
-				<header>
+				<header class="main">
 					<h2>Diogo Martins</h2>
 					<p>Game Developer<br>Programmer<br>2D Artist</p>
+					<a href="https://drive.google.com/file/d/1CCJ91yBLLysY2RDGXceBKXb9ZUuvgi-0/view?usp=sharing"
+						target="_blank" class="button cv fat small">CV</a>
 					<ul class="icons">
-						<li><a href="https://twitter.com/diotins" target="_blank" class="icon brands alt fa-twitter"><span
-									class="label">Twitter</span></a></li>
-						<li><a href="https://www.instagram.com/diogo_martins99" target="_blank" class="icon brands alt fa-instagram"><span
-									class="label">Instagram</span></a></li>
-						<li><a href="https://www.facebook.com/diogo.fmartins99" target="_blank" class="icon brands alt fa-facebook-f"><span
-									class="label">Facebook</span></a>
-						<li><a href="https://www.linkedin.com/in/diogo-martins99/" target="_blank" class="icon brands alt fa-linkedin-in"><span
-									class="label">LinkedIn</span></a>
+						<li><a href="https://twitter.com/diotins" target="_blank"
+								class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.instagram.com/diogo_martins99" target="_blank"
+								class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.facebook.com/diogo.fmartins99" target="_blank"
+								class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a>
+						<li><a href="https://www.linkedin.com/in/diogo-martins99/" target="_blank"
+								class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a>
 							<!--<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>-->
-						<li><a href="https://gitlab.com/diogo_martins99" target="_blank" class="icon brands alt fa-gitlab"><span
-									class="label">GitLab</span></a></li>
-						<li><a href="mailto:diogofm99@gmail.com" target="_blank" class="icon solid alt fa-envelope"><span
+						<li><a href="https://gitlab.com/diogo_martins99" target="_blank"
+								class="icon brands alt fa-gitlab"><span class="label">GitLab</span></a></li>
+						<li><a href="mailto:diogofm99@gmail.com" target="_blank"
+								class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:diogofm99@gmail.com" target="_blank" class="icon solid alt "><span
 									class="label">Email</span></a></li>
 					</ul>
 				</header>
@@ -66,16 +70,16 @@
 								Graduate Degree in Game Development.</p>
 						</div>
 						<div class="col-4 col-12-medium">
-							<p>In college, I formed a group called <a href="https://redoak-studios.itch.io/" 
-								target="_blank">Redoak Studios</a> with 3 colleagues, which was responsible for the 
+							<p>In college, I formed a group called <a href="https://redoak-studios.itch.io/"
+									target="_blank">Redoak Studios</a> with 3 colleagues, which was responsible for the
 								development of many games. We accomplished great results, earning many respected
-								awards from my University and other organizations which you can check in my 
+								awards from my University and other organizations which you can check in my
 								<a href="https://drive.google.com/file/d/1CCJ91yBLLysY2RDGXceBKXb9ZUuvgi-0/view?usp=sharing"
-								target="_blank">Curriculum Vitae</a>.
+									target="_blank">Curriculum Vitae</a>.
 							</p>
 						</div>
 					</div>
-					<hr class="minor colorized"/>
+					<hr class="minor colorized" />
 					<p>Thanks to many past projects, I have developed great skills working as a team and
 						individually, not only for bigger projects but also smaller ones such as game jams - having
 						participated on several throughout my journey as a game developer.
@@ -157,7 +161,7 @@
 						</div>
 					</article>
 					<article>
-						<a href="zoo-quest.html" class="image2"><img src="images/projects/zooquest/spotlight2.jpeg"
+						<a href="zoo-quest.html" class="image2"><img src="images/projects/zooquest/spotlight.png"
 								alt="" /></a>
 						<div class="caption">
 							<h3>Zoo Quest</h3>
@@ -165,36 +169,34 @@
 						</div>
 					</article>
 					<article>
-						<a href="holy-hell.html" class="image2"><img src="images/projects/illuminants/spotlight.PNG"
-								alt="" /></a>
+						<a href="find-your-everything.html" class="image2"><img src="images/projects/findyoureverything/spotlight.png" alt="" /></a>
+						<div class="caption">
+							<h3>Find Your Everything</h3>
+							<p class="subtitle">Programmer | Game Designer </p>
+						</div>
+					</article>
+					<article>
+						<a href="atmu.html" class="image2"><img src="images/projects/atmu/banner.png" alt="" /></a>
+						<div class="caption">
+							<h3>ATMU</h3>
+							<p class="subtitle">Programmer | Game Designer</p>
+						</div>
+					</article>
+
+					<article>
+						<a href="herois-do-mar.html" class="image2"><img
+								src="images/projects/heroisdomar/banner1.jpg" alt="" /></a>
 						<div class="caption">
 							<h3>Heróis do Mar</h3>
 							<p class="subtitle">Game Designer</p>
 						</div>
 					</article>
-					<article>
-						<a href="atmu.html" class="image2"><img src="images/projects/atmu/banner.png"
-								alt="" /></a>
-						<div class="caption">
-							<h3>ATMU</h3>
-							<p class="subtitle">Programmer | Game Designer</p>
-						</div>
-					</article>
-					<article>
-						<a href="holy-hell.html" class="image2"><img src="images/projects/holyhell/spotlight.JPG"
-								alt="" /></a>
-						<div class="caption">
-							<h3>ATMU</h3>
-							<p class="subtitle">Programmer | Game Designer</p>
-						</div>
-					</article>
-					
 				</div>
 			</div>
-			<footer class="major">
-				<a href="https://diotins.itch.io/" target="_blank" class="button">All Projects</a>
+			<!--<footer class="major">
+				<a href="https://diotins.itch.io/" target="_blank" class="button fat">Other Projects</a>
 
-			</footer>
+			</footer>-->
 		</section>
 
 
@@ -298,9 +300,10 @@
 			<div class="container">
 				<header>
 					<h2>Thank you for your time!</h2>
-					<p>You can find more detailed information about me and my work in my
-						<a class="dark" href="https://drive.google.com/file/d/1CCJ91yBLLysY2RDGXceBKXb9ZUuvgi-0/view?usp=sharing"
-						target="_blank">Curriculum Vitae</a>
+					<p>You can find more details about me and my work in my
+						<a class="dark"
+							href="https://drive.google.com/file/d/1CCJ91yBLLysY2RDGXceBKXb9ZUuvgi-0/view?usp=sharing"
+							target="_blank">Curriculum Vitae</a>
 						<br>I hope to hear from you in the future :) </p>
 				</header>
 			</div>
