Finish FYE page; Tweak main and other pages.

--- a/bernardino.html
+++ b/bernardino.html
@@ -65,7 +65,7 @@
 								<footer>
 									<ul class="game-info">
 										<li>
-											<p>Singleplayer</p>
+											<p>Single-player</p>
 										</li>
 										<li>
 											<p>Physics-based</p>
