--- a/herois-do-mar.html
+++ b/herois-do-mar.html
@@ -80,7 +80,7 @@
 								</footer>
 								<hr />
 								<h3>Synopsis</h3>
-								<p>Heróis do Mar is an arena brawler whose characters are portuguese historic figures. Each character has their own set of abilities which the players have to skillfully use to defeat their oponents.
+								<p>Heróis do Mar is an arena brawler whose characters are portuguese historic figures. Each character has their own set of abilities which the players have to skillfully use to defeat their opponents.
 								</p>
 								<!-- ITCH.IO PAGE -->
 								<footer>
