--- a/holy-hell.html
+++ b/holy-hell.html
@@ -64,7 +64,7 @@
 							<section>
 								<footer>
 									<ul class="game-info">
-										<li><p>Singleplayer</p></li>
+										<li><p>Single-player</p></li>
 										<li><p>Action-adventure</p></li>
 										<li><p>Top-down</p></li>
 										<li><p>3D</p></li>
@@ -117,7 +117,7 @@
 						<section id="content">
 							<span class="image fit"><img src="images/projects/holyhell/banner.png" alt="" /></span>
 							<h3>About The Project</h3>
-							<p>Holy Hell was a 6 month project that I developed in Unity, along with
+							<p>Holy Hell was a 6 month project that I developed in Unity with
 								3 colleagues of mine, for my last graduation year. Aside from improving skills that
 								I already had (e.g. programming),
 								it helped me develop skills in project management and marketing aswell.
