--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<div class="col-4 col-12-medium">
 							<p>I am a 20 year-old man from Lisbon, Portugal who has been passionate about
 								the entertainment industry for as long as I can remember. I
-								started my graduation 3 years ago and now I'm only an internship away from having a
+								began my graduation 3 years ago and now I'm only an internship away from having a
 								Graduate Degree in Game Development.</p>
 						</div>
 						<div class="col-4 col-12-medium">
@@ -153,7 +153,7 @@
 						</div>
 					</article>
 					<article>
-						<a href="illuminants.html" class="image2"><img src="images/projects/illuminants/wallpaper 1.png"
+						<a href="illuminants.html" class="image2"><img src="images/projects/illuminants/spotlight.png"
 								alt="" /></a>
 						<div class="caption">
 							<h3>Illuminants</h3>
