--- a/find-your-everything.html
+++ b/find-your-everything.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Diogo Martins - ATMU</title>
+	<title>Diogo Martins - Find Your Everything</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -53,8 +53,8 @@
 		<div id="main" class="wrapper style1">
 			<div class="container">
 				<header class="major">
-					<h2>ATMU</h2>
-					<p>Find your way back home in this post-apocalyptic world</p>
+					<h2>Find Your Everything</h2>
+					<p>A short experience and abstract representation of real life dating</p>
 				</header>
 				<div class="row gtr-150">
 					<div class="col-4 col-12-medium">
@@ -65,13 +65,13 @@
 								<footer>
 									<ul class="game-info">
 										<li>
-											<p>Singleplayer</p>
+											<p>Single-player</p>
 										</li>
 										<li>
-											<p>Puzzle-solving</p>
+											<p>Experimental</p>
 										</li>
 										<li>
-											<p>Sidescroller</p>
+											<p>Top-down</p>
 										</li>
 										<li>
 											<p>2D</p>
@@ -80,13 +80,14 @@
 								</footer>
 								<hr />
 								<h3>Synopsis</h3>
-								<p>ATMU is a 2D side-scroller game, where an abandoned robot tries to find his way home 
-									by overcoming obstacles and solving puzzles on a deserted planet.
+								<p>Find Your Everything is a short experimental game that abstractly represents the
+									journey to find the love of ones life.
 								</p>
 								<!-- ITCH.IO PAGE -->
 								<footer>
 									<ul class="actions">
-										<li><a href="https://videojogoslusofona.itch.io/atmu" target="_blank" class="button">Download Link</a></li>
+										<li><a href="https://redoak-studios.itch.io/find-your-everything"
+												target="_blank" class="button">Download Link</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -98,42 +99,60 @@
 
 						<!-- Content -->
 						<section id="content">
-							<span class="image fit"><img src="images/projects/atmu/banner.png" alt="" /></span>
+							<span class="image fit"><img src="images/projects/findyoureverything/banner.jpg"
+									alt="" /></span>
 							<h3>About The Project</h3>
-							<p>ATMU was developed in 3 months alongside Illuminants. It was a 1st year project and
-								the one that most developed my programming skills in that year. The game design and level design were 
-								also incredibly challenging specially given the experience my team and I had, but I'm proud to say
-								that it worked out great and I gained a great amount of experience from it.
+							<p>FYE was developed for the Ludum Dare 45 game jam that had a duration of 3 days and whose
+								theme was "Start with nothing".
+								It is an experimental game where we try to create a puzzling analogy to what finding the
+								love of your life might be like in real life.
 								<br><br>
-								The game as been showcased in many events and has won an Honorable Mention award given by my university.
+								The final result wasn't as polished as we intended to, due to lack of time, but we got
+								plenty of good feedback.
+								<br><br>
+								We didn't touch the game after the jam finished, but we will certainly give it some
+								final touches in our spare time.
 							<h3>My Role In The Project</h3>
 							<ul class="roles">
 								<li>Programming
-									<p> I was one of ATMU's programmers.</p>
+									<p> I was one of the programmers, working mostly on gameplay and the procedural
+										animation.</p>
 								</li>
 
 								<li>Game Design
-									<p> I've worked on both game design and level design side-by-side with my team.</p>
+									<p> I've worked on game design with my team as well as the game concept itself.</p>
 								</li>
 							</ul>
 							<!-- Gallery  -->
 							<h3>Gallery</h3>
 							<div class="gallery2">
 								<article class="from-left">
-									<a href="images/projects/atmu/banner.png" class="image2 fit"><img
-											src="images/projects/atmu/banner.png" alt="" /></a>
+									<a href="images/projects/findyoureverything/SS1.JPG" class="image2 fit"><img
+											src="images/projects/findyoureverything/SS1.JPG" alt="" /></a>
 								</article>
 								<article class="from-left">
-									<a href="images/projects/atmu/ss1.png" class="image2 fit"><img
-											src="images/projects/atmu/ss1.png" alt="" /></a>
+									<a href="images/projects/findyoureverything/SS2.JPG" class="image2 fit"><img
+											src="images/projects/findyoureverything/SS2.JPG" alt="" /></a>
 								</article>
 								<article class="from-left">
-									<a href="images/projects/atmu/ss2.png" class="image2 fit"><img
-											src="images/projects/atmu/ss2.png" alt="" /></a>
+									<a href="images/projects/findyoureverything/SS3.JPG" class="image2 fit"><img
+											src="images/projects/findyoureverything/SS3.JPG" alt="" /></a>
 								</article>
 								<article class="from-left">
-									<a href="images/projects/atmu/ss3.png" class="image2 fit"><img
-											src="images/projects/atmu/ss3.png" alt="" /></a>
+									<a href="images/projects/findyoureverything/SS4.JPG" class="image2 fit"><img
+											src="images/projects/findyoureverything/SS4.JPG" alt="" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/findyoureverything/SS5.JPG" class="image2 fit"><img
+											src="images/projects/findyoureverything/SS5.JPG" alt="" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/findyoureverything/SS6.JPG" class="image2 fit"><img
+											src="images/projects/findyoureverything/SS6.JPG" alt="" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/findyoureverything/feedback1.JPG" class="image2 fit"><img
+											src="images/projects/findyoureverything/feedback1.JPG" alt="" /></a>
 								</article>
 							</div>
 						</section>
