--- a/zoo-quest.html
+++ b/zoo-quest.html
@@ -65,7 +65,7 @@
 								<footer>
 									<ul class="game-info">
 										<li>
-											<p>Singleplayer</p>
+											<p>Single-player</p>
 										</li>
 										<li>
 											<p>Riddle/Puzzle</p>
@@ -83,7 +83,7 @@
 								</footer>
 								<hr />
 								<h3>Synopsis</h3>
-								<p>Monkeys have escaped from their cage, and has a Zoo Keeper, it is your duty to find
+								<p>Monkeys have escaped from their cage, and as a Zoo Keeper, it is your duty to find
 									them and bring them back to where they're safe!
 									Explore the zoo and talk to its animals, they will give you clues in exchange for
 									favors!
