Add LinkedIn preview meta tags

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 	<title>Diogo Martins - Portfolio</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta property='og:title' content='Diogo Martins - Portfolio' />
+	<meta property='og:image' content='https://imgur.com/wpDvkS2.jpg' />
+	<meta property='og:description' content='Long story short, I am a person passionate about game development and the entertainment industry.' />
+	<meta property='og:url' content='https://diogo-martins99.github.io/' />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -169,7 +173,8 @@
 						</div>
 					</article>
 					<article>
-						<a href="find-your-everything.html" class="image2"><img src="images/projects/findyoureverything/spotlight.png" alt="" /></a>
+						<a href="find-your-everything.html" class="image2"><img
+								src="images/projects/findyoureverything/spotlight.png" alt="" /></a>
 						<div class="caption">
 							<h3>Find Your Everything</h3>
 							<p class="subtitle">Programmer | Game Designer </p>
@@ -184,8 +189,8 @@
 					</article>
 
 					<article>
-						<a href="herois-do-mar.html" class="image2"><img
-								src="images/projects/heroisdomar/banner1.jpg" alt="" /></a>
+						<a href="herois-do-mar.html" class="image2"><img src="images/projects/heroisdomar/banner1.jpg"
+								alt="" /></a>
 						<div class="caption">
 							<h3>Heróis do Mar</h3>
 							<p class="subtitle">Game Designer</p>
