--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<title>Diogo Martins - Portfolio</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
+	<!-- LinkedIn meta tags -->
 	<meta property='og:title' content='Diogo Martins - Portfolio' />
 	<meta property='og:image' content='https://imgur.com/wpDvkS2.jpg' />
 	<meta property='og:description' content='Long story short, I am a person passionate about game development and the entertainment industry.' />
