Update current professional status

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 						</div>
 						<div class="col-4 col-12-medium">
 							<p>I am a 20 year-old man from Lisbon, Portugal who has been passionate about
-								the entertainment industry for as long as I can remember. I
-								began my graduation 3 years ago and now I'm only an internship away from having a
-								Graduate Degree in Game Development.</p>
+								the entertainment industry for as long as I can remember. I graduated in Game Development 
+								in the end of 2020 after completing my internship at Nerd Monkeys and I've been 
+								working there as a Junior Programmer since!</p>
 						</div>
 						<div class="col-4 col-12-medium">
 							<p>In college, I formed a group called <a href="https://redoak-studios.itch.io/"
@@ -86,9 +86,10 @@
 						</div>
 					</div>
 					<hr class="minor colorized" />
-					<p>Thanks to many past projects, I have developed great skills working as a team and
-						individually, not only for bigger projects but also smaller ones such as game jams - having
-						participated on several throughout my journey as a game developer.
+					<p>Thanks to many past professional, educational and recreational projects, 
+						as well as my current position at Nerd Monkeys I have developed great skills 
+						working as a team and individually, not only for bigger projects but also smaller 
+						ones such as game jams - having participated on several throughout my journey as a game developer.
 						<br><br>Aside from the game dev world, I am also an energetic individual who practices combat
 						sports.
 						I'm a Kickboxing and Muay Thai athlete and I've even won a Kickboxing National Champion title.
@@ -111,13 +112,13 @@
 							<h3>Programming</h3>
 							<p>I specialize in C# and object-oriented programming but I have worked with many
 								other languages such as C, JavaScript and HTML both in game development and other
-								applications aswell.
+								applications as well.
 							</p>
 						</section>
 						<section class="col-4 col-6-medium col-12-xsmall">
 							<span class="icon solid alt major fa-gamepad"></span>
 							<h3>Game Design</h3>
-							<p>One of my most consistant roles in game development has been game design, which I
+							<p>One of my most consistent roles in game development has been game design, which I
 								had in all of my previous projects. Other extensions of this area such as World and
 								Level Design have also been a part of my work.
 							</p>
