Add happy new rocket page and improve other pages

--- a/happy-new-rocket.html
+++ b/happy-new-rocket.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Diogo Martins - Find Your Everything</title>
+	<title>Diogo Martins - Happy New Rocket</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -53,8 +53,8 @@
 		<div id="main" class="wrapper style1">
 			<div class="container">
 				<header class="major">
-					<h2>Find Your Everything</h2>
-					<p>A short experience and abstract representation of real life dating</p>
+					<h2>Happy New Rocket</h2>
+					<p>A frantic multiplayer action game where you battle for the best fireworks show until midnight</p>
 				</header>
 				<div class="row gtr-150">
 					<div class="col-4 col-12-medium">
@@ -64,32 +64,33 @@
 							<section>
 								<footer>
 									<ul class="game-info">
-										<li>
-											<p>Single-player</p>
-										</li>
-										<li>
-											<p>Experimental</p>
-										</li>
-										<li>
-											<p>Top-down</p>
-										</li>
-										<li>
-											<p>2D</p>
-										</li>
+										<li><p>Online Multiplayer</p></li>
+										<li><p>Action</p></li>
+										<li><p>Top-down</p></li>
+										<li><p>3D</p></li>
 									</ul>
 								</footer>
 								<hr />
 								<h3>Synopsis</h3>
-								<p>Find Your Everything is a short experimental game that abstractly represents the
-									journey to find the love of ones life.
+								<p>Happy New Rocket is an online multiplayer action game in 
+									which the players compete for the best fireworks show before the clock hits zero.
 								</p>
 								<!-- ITCH.IO PAGE -->
-								<footer>
+								<!--<footer>
 									<ul class="actions">
-										<li><a href="https://redoak-studios.itch.io/find-your-everything"
-												target="_blank" class="button">Download Link</a></li>
+										<li><a href="#" target="_blank" class="button">Download Link</a></li>
 									</ul>
-								</footer>
+								</footer>-->
+							</section>
+							<hr />
+
+							<!-- Trailer -->
+							<section>
+								<h3>Trailer</h3>
+								<div class="video embed fit">
+									<!--<video src="images/projects/holyhell/trailer.mp4" poster="images/projects/holyhell/banner.png"></video>-->
+									<iframe src="https://www.youtube-nocookie.com/embed/aQV76wVpdhA?rel=0" width="560" height="315" allowfullscreen frameborder="0"></iframe>
+								</div>
 							</section>
 							<hr />
 						</section>
@@ -99,56 +100,54 @@
 
 						<!-- Content -->
 						<section id="content">
-							<span class="image fit"><img src="images/projects/findyoureverything/banner.jpg"
-									alt="" /></span>
+							<span class="image fit"><img src="images/projects/happynewrocket/Header.png" alt="" /></span>
 							<h3>About The Project</h3>
-							<p>FYE was developed for the Ludum Dare 45 game jam that had a duration of 3 days and whose
-								theme was "Start with nothing".
-								It is an experimental game where we try to create a puzzling analogy to what finding the
-								love of your life might be like in real life.
-								<br><br>
-								The final result wasn't as polished as we intended to, due to lack of time, but we got
-								plenty of good feedback.
-								<br><br>
-								We didn't touch the game after the jam finished, but we will certainly give it some
-								final touches in our spare time.
+							<p>On the final week of 2020, my college teammates and I decided to 
+								participate in the Weekly Game Jam 181 whose theme was "New Year's Countdown".
+								<br><br> The four of us hadn't been involved in game jams in a long time but we always 
+								like to challenge ourselves so we decided to make our first 3D jam and, even more ambitiously, 
+								a multiplayer online game!
+								<br><br> At the time, I was working at Nerd Monkeys for a few months so my programming skills 
+								had already improved substantially compared to when I was in college. Something that this 
+								project definitely reflected.
+								<br><br> It's worth stating that this game was <b>developed in only 6 days</b>, which is quite an 
+								accomplishment from our perspective!
 							<h3>My Role In The Project</h3>
 							<ul class="roles">
-								<li>Programming
-									<p> I was one of the programmers, working mostly on gameplay and the procedural
-										animation.</p>
+								<li>Gameplay Programming
+									<p> I was the gameplay programmer, implementing everything from scratch.</p>
 								</li>
-
+								<li>Online Programming
+									<p> Rui was the online programmer and did almost all of the online implementation. 
+										But I also got the chance to work on it after I was finished with the gameplay programming.
+										<br>The online implementation was done using the Photon and SmoothSync assets.</p>
+								</li>
 								<li>Game Design
-									<p> I've worked on game design with my team as well as the game concept itself.</p>
+									<p> I've worked on the game's concept and game design.</p>
 								</li>
 							</ul>
 							<!-- Gallery  -->
 							<h3>Gallery</h3>
 							<div class="gallery2">
 								<article class="from-left">
-									<a href="images/projects/findyoureverything/SS1.JPG" class="image2 fit"><img
-											src="images/projects/findyoureverything/SS1.JPG" alt="" /></a>
+									<a href="images/projects/happynewrocket/Screenshot 1.png" class="image2 fit"><img
+											src="images/projects/happynewrocket/Screenshot 1.png" alt="" /></a>
 								</article>
 								<article class="from-left">
-									<a href="images/projects/findyoureverything/SS3.JPG" class="image2 fit"><img
-											src="images/projects/findyoureverything/SS3.JPG" alt="" /></a>
+									<a href="images/projects/happynewrocket/Screenshot 2.png" class="image2 fit"><img
+											src="images/projects/happynewrocket/Screenshot 2.png" alt="" /></a>
 								</article>
 								<article class="from-left">
-									<a href="images/projects/findyoureverything/SS4.JPG" class="image2 fit"><img
-											src="images/projects/findyoureverything/SS4.JPG" alt="" /></a>
+									<a href="images/projects/happynewrocket/Screenshot 3.png" class="image2 fit"><img
+											src="images/projects/happynewrocket/Screenshot 3.png" alt="" /></a>
 								</article>
 								<article class="from-left">
-									<a href="images/projects/findyoureverything/SS5.JPG" class="image2 fit"><img
-											src="images/projects/findyoureverything/SS5.JPG" alt="" /></a>
+									<a href="images/projects/happynewrocket/Screenshot 4.png" class="image2 fit"><img
+											src="images/projects/happynewrocket/Screenshot 4.png" alt="" /></a>
 								</article>
 								<article class="from-left">
-									<a href="images/projects/findyoureverything/SS6.JPG" class="image2 fit"><img
-											src="images/projects/findyoureverything/SS6.JPG" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/findyoureverything/feedback1.JPG" class="image2 fit"><img
-											src="images/projects/findyoureverything/feedback1.JPG" alt="" /></a>
+									<a href="images/projects/happynewrocket/Screenshot 5.png" class="image2 fit"><img
+											src="images/projects/happynewrocket/Screenshot 5.png" alt="" /></a>
 								</article>
 							</div>
 						</section>
