--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						</div>
 					</div>
 					<hr class="minor colorized" />
-					<p>Thanks to many past professional, educational and recreational projects, 
+					<p>Thanks to many professional, educational and recreational past projects, 
 						as well as my current position at Nerd Monkeys I have developed great skills 
 						working as a team and individually, not only for bigger projects but also smaller 
 						ones such as game jams - having participated on several throughout my journey as a game developer.
@@ -144,19 +144,19 @@
 				<!-- Gallery -->
 				<div class="gallery style1 medium onscroll-fade-in">
 					<article>
+						<a href="happy-new-rocket.html" class="image2"><img src="images/projects/happynewrocket/spotlight.png"
+								alt="" /></a>
+						<div class="caption">
+							<h3>Happy New Rocket</h3>
+							<p class="subtitle"> Programmer | Game Designer</p>
+						</div>
+					</article>
+					<article>
 						<a href="holy-hell.html" class="image2"><img src="images/projects/holyhell/spotlight.JPG"
 								alt="" /></a>
 						<div class="caption">
 							<h3>Holy Hell</h3>
 							<p class="subtitle">Programmer | Game Designer | 2D Artist | Marketing Manager</p>
-						</div>
-					</article>
-					<article>
-						<a href="bernardino.html" class="image2"><img src="images/projects/bernardino/banner_square.png"
-								alt="" /></a>
-						<div class="caption">
-							<h3>Bernardino</h3>
-							<p class="subtitle">Programmer | Game Designer | 2D Artist | 3D Artist</p>
 						</div>
 					</article>
 					<article>
@@ -167,6 +167,15 @@
 							<p class="subtitle">Programmer | Game Designer | 2D Artist</p>
 						</div>
 					</article>
+					<article>
+						<a href="bernardino.html" class="image2"><img src="images/projects/bernardino/banner_square.png"
+								alt="" /></a>
+						<div class="caption">
+							<h3>Bernardino</h3>
+							<p class="subtitle">Programmer | Game Designer | 2D Artist | 3D Artist</p>
+						</div>
+					</article>
+					
 					<article>
 						<a href="zoo-quest.html" class="image2"><img src="images/projects/zooquest/spotlight.png"
 								alt="" /></a>
