Add download button to Happy New Rocket! page

--- a/happy-new-rocket.html
+++ b/happy-new-rocket.html
@@ -76,11 +76,11 @@
 									which the players compete for the best fireworks show before the clock hits zero.
 								</p>
 								<!-- ITCH.IO PAGE -->
-								<!--<footer>
+								<footer>
 									<ul class="actions">
-										<li><a href="#" target="_blank" class="button">Download Link</a></li>
+										<li><a href="https://redoak-studios.itch.io/happy-new-rocket" target="_blank" class="button">Download Link</a></li>
 									</ul>
-								</footer>-->
+								</footer>
 							</section>
 							<hr />
 
