Fix mistake in bernardino's description

--- a/bernardino.html
+++ b/bernardino.html
@@ -124,7 +124,7 @@
 							<h3>About The Project</h3>
 							<p>Bernardino was a Unity project developed in 4 months by me and my group for the last
 								semester of the second year. Since we we're working on two big projects for that
-								semester - Bernardino and Holy Hell - we decided to do a proper division of tasks. So we
+								semester - Bernardino and Heróis do Mar - we decided to do a proper division of tasks. So we
 								all worked on the game design of both projects, but split into 2 groups for the rest of
 								their development, still side-by-side giving feedback and sharing thoughts.
 								<br><br>
