Correct number of months worked in ATMU

--- a/atmu.html
+++ b/atmu.html
@@ -100,7 +100,7 @@
 						<section id="content">
 							<span class="image fit"><img src="images/projects/atmu/banner.png" alt="" /></span>
 							<h3>About The Project</h3>
-							<p>ATMU was developed in 3 months alongside Illuminants. It was a 1st year project and
+							<p>ATMU was developed in about 4 months alongside Illuminants. It was a 1st year project and
 								the one that most developed my programming skills in that year. The game design and level design were 
 								also incredibly challenging specially given the experience my team and I had, but I'm proud to say
 								that it worked out great and I gained a great amount of experience from it.
