Fix missing screenshot in Bernardino page

--- a/bernardino.html
+++ b/bernardino.html
@@ -182,8 +182,8 @@
 											src="images/projects/bernardino/SS5.PNG" alt="" /></a>
 								</article>
 								<article class="from-left">
-									<a href="images/projects/bernardino/SS6.PNG" class="image2 fit"><img
-											src="images/projects/bernardino/SS6.PNG" alt="" /></a>
+									<a href="images/projects/bernardino/SS6.png" class="image2 fit"><img
+											src="images/projects/bernardino/SS6.png" alt="" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/bernardino/SS7.PNG" class="image2 fit"><img
