Update main page

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 							</header>
 						</div>
 						<div class="col-4 col-12-medium">
-							<p>I am a 20 year-old man from Lisbon, Portugal who has been passionate about
+							<p>I am a 21 year-old man from Lisbon, Portugal who has been passionate about
 								the entertainment industry for as long as I can remember. I graduated in Game Development 
 								in the end of 2020 after completing my internship at Nerd Monkeys and I've been 
-								working there as a Junior Programmer since!</p>
+								working there mainly as a Programmer since!</p>
 						</div>
 						<div class="col-4 col-12-medium">
-							<p>In college, I formed a group called <a href="https://redoak-studios.itch.io/"
+							<p>In college, I formed a team called <a href="https://redoak-studios.itch.io/"
 									target="_blank">Redoak Studios</a> with 3 colleagues, which was responsible for the
 								development of many games. We accomplished great results, earning many respected
 								awards from my University and other organizations which you can check in my
@@ -89,10 +89,11 @@
 					<p>Thanks to many professional, educational and recreational past projects, 
 						as well as my current position at Nerd Monkeys I have developed great skills 
 						working as a team and individually, not only for bigger projects but also smaller 
-						ones such as game jams - having participated on several throughout my journey as a game developer.
+						ones such as game jams - having participated on several throughout my journey as a game developer. 
+						<br>With 3+ years of experience, <b>Unity</b> has been my go-to engine, but I've delved into <b>Unreal</b> as well.
 						<br><br>Aside from the game dev world, I am also an energetic individual who practices combat
 						sports.
-						I'm a Kickboxing and Muay Thai athlete and I've even won a Kickboxing National Champion title.
+						I'm a Kickboxing and Muay Thai federate athlete with a Kickboxing National Champion title.
 					</p>
 				</div>
 			</div>
@@ -111,7 +112,7 @@
 							<span class="icon solid alt major fa-keyboard"></span>
 							<h3>Programming</h3>
 							<p>I specialize in C# and object-oriented programming but I have worked with many
-								other languages such as C, JavaScript and HTML both in game development and other
+								other languages such as C, C++, JavaScript and HTML both in game development and other
 								applications as well.
 							</p>
 						</section>
