--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 	<!-- LinkedIn meta tags -->
 	<meta property='og:title' content='Diogo Martins - Portfolio' />
 	<meta property='og:image' content='https://imgur.com/wpDvkS2.jpg' />
-	<meta property='og:description' content='Long story short, I am a person passionate about game development and the entertainment industry.' />
+	<meta property='og:description'
+		content='Long story short, I am a person passionate about game development and the entertainment industry.' />
 	<meta property='og:url' content='https://diogo-martins99.github.io/' />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
 </head>
 
 <body class="is-preload landing">
@@ -71,26 +73,28 @@
 						</div>
 						<div class="col-4 col-12-medium">
 							<p>I am a 21 year-old man from Lisbon, Portugal who has been passionate about
-								the entertainment industry for as long as I can remember. I graduated in Game Development 
-								in the end of 2020 after completing my internship at Nerd Monkeys and I've been 
+								the entertainment industry for as long as I can remember. I graduated in Game
+								Development
+								in the end of 2020 after completing my internship at Nerd Monkeys and I've been
 								working there mainly as a Programmer since!</p>
 						</div>
 						<div class="col-4 col-12-medium">
 							<p>In college, I formed a team called <a href="https://redoak-studios.itch.io/"
 									target="_blank">Redoak Studios</a> with 3 colleagues, which was responsible for the
 								development of many games. We accomplished great results, earning many respected
-								awards from my University and other organizations which you can check in my
-								<a href="https://drive.google.com/file/d/1CCJ91yBLLysY2RDGXceBKXb9ZUuvgi-0/view?usp=sharing"
-									target="_blank">Curriculum Vitae</a>.
+								awards from my University and other organizations which you can check in the
+								<a href="#accolades">Accolades</a> section.
 							</p>
 						</div>
 					</div>
 					<hr class="minor colorized" />
-					<p>Thanks to many professional, educational and recreational past projects, 
-						as well as my current position at Nerd Monkeys I have developed great skills 
-						working as a team and individually, not only for bigger projects but also smaller 
-						ones such as game jams - having participated on several throughout my journey as a game developer. 
-						<br>With 3+ years of experience, <b>Unity</b> has been my go-to engine, but I've delved into <b>Unreal</b> as well.
+					<p>Thanks to many professional, educational and recreational past projects,
+						as well as my current position at Nerd Monkeys I have developed great skills
+						working as a team and individually, not only for bigger projects but also smaller
+						ones such as game jams - having participated on several throughout my journey as a game
+						developer.
+						<br>With 3+ years of experience, <b>Unity</b> has been my go-to engine, but I've delved into
+						<b>Unreal</b> as well.
 						<br><br>Aside from the game dev world, I am also an energetic individual who practices combat
 						sports.
 						I'm a Kickboxing and Muay Thai federate athlete with a Kickboxing National Champion title.
@@ -145,8 +149,8 @@
 				<!-- Gallery -->
 				<div class="gallery style1 medium onscroll-fade-in">
 					<article>
-						<a href="happy-new-rocket.html" class="image2"><img src="images/projects/happynewrocket/spotlight.png"
-								alt="" /></a>
+						<a href="happy-new-rocket.html" class="image2"><img
+								src="images/projects/happynewrocket/spotlight.png" alt="" /></a>
 						<div class="caption">
 							<h3>Happy New Rocket</h3>
 							<p class="subtitle"> Programmer | Game Designer</p>
@@ -176,7 +180,7 @@
 							<p class="subtitle">Programmer | Game Designer | 2D Artist | 3D Artist</p>
 						</div>
 					</article>
-					
+
 					<article>
 						<a href="zoo-quest.html" class="image2"><img src="images/projects/zooquest/spotlight.png"
 								alt="" /></a>
@@ -217,7 +221,49 @@
 			</footer>-->
 		</section>
 
-
+		<section id="accolades" class="wrapper style1 align-center special fade-up">
+			<div class="container2">
+				<header class="major">
+					<h2>Accolades</h2>
+				</header>
+				<div class="accolades">
+					<!--<div class="col-12">-->
+						<ul class="accolades-list">
+							<li>
+								<img src="images/accolades/loadingzone.png" class="alt" alt="Loading Zone Spotlight Award">
+								<b>Loading Zone Spotlight Award 2019</b>
+								<span>2nd place award with several games</span>
+							</li>
+							<li>
+								<img src="images/accolades/indieX2019.png" class="alt" alt="Indie X 2019 Finalist">
+								<b>Indie X 2019 Finalist</b>
+								<span>Finalist at Indie X with Heróis do Mar</span>
+							</li>
+							<li>
+								<img src="images/accolades/lusofona.png" class="alt" alt="Accolade 3">
+								<b>Best Concept Award</b>
+								<span>Lusófona's Best Concept Award with Heróis do Mar</span>
+							</li>
+							<li>
+								<img src="images/accolades/indieX2018.png" class="alt" alt="Indie X 2018 Finalist">
+								<b>Indie X 2018 Finalist</b>
+								<span>Finalist at Indie X with Illuminants</span>
+							</li>
+							<li>
+								<img src="images/accolades/fnac.png" class="alt" alt="Accolade 5">
+								<b>Best Game Award</b>
+								<span>FNAC's Best Game Award with Illuminants</span>
+							</li>
+							<li>
+								<img src="images/accolades/lusofona.png" class="alt" alt="Accolade 6">
+								<b>Honorable Mention</b>
+								<span>Lusófona's Honorable Mention with ATMU</span>
+							</li>
+						</ul>
+					<!-- </div> -->
+				</div>
+			</div>
+		</section>
 
 
 		<!------------------------------------------------------------>
@@ -322,7 +368,8 @@
 						<a class="dark"
 							href="https://drive.google.com/file/d/1CCJ91yBLLysY2RDGXceBKXb9ZUuvgi-0/view?usp=sharing"
 							target="_blank">Curriculum Vitae</a>
-						<br>I hope to hear from you in the future :) </p>
+						<br>I hope to hear from you in the future :)
+					</p>
 				</header>
 			</div>
 		</section>
