Improve accolades and update CV link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<header class="main">
 					<h2>Diogo Martins</h2>
 					<p>Game Developer<br>Programmer<br>2D Artist</p>
-					<a href="https://drive.google.com/file/d/1CCJ91yBLLysY2RDGXceBKXb9ZUuvgi-0/view?usp=sharing"
+					<a href="https://drive.google.com/file/d/1-94YiKcRi6oO8We4NeW-ow2VBnL3d1an/view?usp=sharing"
 						target="_blank" class="button cv fat small">CV</a>
 					<ul class="icons">
 						<li><a href="https://twitter.com/diotins" target="_blank"
@@ -83,7 +83,7 @@
 									target="_blank">Redoak Studios</a> with 3 colleagues, which was responsible for the
 								development of many games. We accomplished great results, earning many respected
 								awards from my University and other organizations which you can check in the
-								<a href="#accolades">Accolades</a> section.
+								<a href="#accolades" class="scrolly">Accolades</a> section.
 							</p>
 						</div>
 					</div>
@@ -227,40 +227,38 @@
 					<h2>Accolades</h2>
 				</header>
 				<div class="accolades">
-					<!--<div class="col-12">-->
-						<ul class="accolades-list">
-							<li>
-								<img src="images/accolades/loadingzone.png" class="alt" alt="Loading Zone Spotlight Award">
-								<b>Loading Zone Spotlight Award 2019</b>
-								<span>2nd place award with several games</span>
-							</li>
-							<li>
-								<img src="images/accolades/indieX2019.png" class="alt" alt="Indie X 2019 Finalist">
-								<b>Indie X 2019 Finalist</b>
-								<span>Finalist at Indie X with Heróis do Mar</span>
-							</li>
-							<li>
-								<img src="images/accolades/lusofona.png" class="alt" alt="Accolade 3">
-								<b>Best Concept Award</b>
-								<span>Lusófona's Best Concept Award with Heróis do Mar</span>
-							</li>
-							<li>
-								<img src="images/accolades/indieX2018.png" class="alt" alt="Indie X 2018 Finalist">
-								<b>Indie X 2018 Finalist</b>
-								<span>Finalist at Indie X with Illuminants</span>
-							</li>
-							<li>
-								<img src="images/accolades/fnac.png" class="alt" alt="Accolade 5">
-								<b>Best Game Award</b>
-								<span>FNAC's Best Game Award with Illuminants</span>
-							</li>
-							<li>
-								<img src="images/accolades/lusofona.png" class="alt" alt="Accolade 6">
-								<b>Honorable Mention</b>
-								<span>Lusófona's Honorable Mention with ATMU</span>
-							</li>
-						</ul>
-					<!-- </div> -->
+					<ul class="accolades-list">
+						<li>
+							<img src="images/accolades/loadingzone.png" class="alt" alt="Loading Zone Spotlight Award">
+							<b>Loading Zone Spotlight Award 2019</b>
+							<span>2nd place award with several games</span>
+						</li>
+						<li>
+							<img src="images/accolades/indieX2019.png" class="alt" alt="Indie X 2019 Finalist">
+							<b>Indie X 2019 Finalist</b>
+							<span>Finalist at Indie X with Heróis do Mar</span>
+						</li>
+						<li>
+							<img src="images/accolades/lusofona.png" class="alt" alt="Accolade 3">
+							<b>Best Concept Award</b>
+							<span>Lusófona's Best Concept Award with Heróis do Mar</span>
+						</li>
+						<li>
+							<img src="images/accolades/indieX2018.png" class="alt" alt="Indie X 2018 Finalist">
+							<b>Indie X 2018 Finalist</b>
+							<span>Finalist at Indie X with Illuminants</span>
+						</li>
+						<li>
+							<img src="images/accolades/fnac.png" class="alt" alt="Accolade 5">
+							<b>Best Game Award</b>
+							<span>FNAC's Best Game Award with Illuminants</span>
+						</li>
+						<li>
+							<img src="images/accolades/lusofona.png" class="alt" alt="Accolade 6">
+							<b>Honorable Mention</b>
+							<span>Lusófona's Honorable Mention with ATMU</span>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</section>
@@ -366,7 +364,7 @@
 					<h2>Thank you for your time!</h2>
 					<p>You can find more details about me and my work in my
 						<a class="dark"
-							href="https://drive.google.com/file/d/1CCJ91yBLLysY2RDGXceBKXb9ZUuvgi-0/view?usp=sharing"
+							href="https://drive.google.com/file/d/1-94YiKcRi6oO8We4NeW-ow2VBnL3d1an/view?usp=sharing"
 							target="_blank">Curriculum Vitae</a>
 						<br>I hope to hear from you in the future :)
 					</p>
