Fix missing image in herois do mar page

--- a/herois-do-mar.html
+++ b/herois-do-mar.html
@@ -122,8 +122,8 @@
 											src="images/projects/heroisdomar/ss3.jpg" alt="" /></a>
 								</article>
 								<article class="from-left">
-									<a href="images/projects/heroisdomar/ss7.jpg" class="image2 fit"><img
-											src="images/projects/heroisdomar/ss7.jpg" alt="" /></a>
+									<a href="images/projects/heroisdomar/ss7.JPG" class="image2 fit"><img
+											src="images/projects/heroisdomar/ss7.JPG" alt="" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/heroisdomar/ss6.jpg" class="image2 fit"><img
