Update accolades list

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 				</header>
 
 			</div>
-			<a href="#one" class="goto-next scrolly">Next</a>
+			<a href="#about-me" class="goto-next scrolly">Next</a>
 		</section>
 
 		<!-- One -->
-		<section id="one" class="spotlight style1 bottom">
+		<section id="about-me" class="spotlight style1 bottom">
 			<span class="image overlayed main"><img src="images/me/me5_streched.JPG" alt="" /></span>
 			<div class="content">
 				<div class="container">
@@ -104,7 +104,7 @@
 		</section>
 
 		<!-- Two -->
-		<section id="two" class="wrapper style1 special fade-up">
+		<section id="qualifications" class="wrapper style1 special fade-up">
 			<div class="container">
 				<header class="major">
 					<h2>What are my main qualifications?</h2>
@@ -141,7 +141,7 @@
 			</div>
 		</section>
 		<!-- Three -->
-		<section id="three" class="wrapper style1 align-center special fade-up">
+		<section id="projects" class="wrapper style1 align-center special fade-up">
 			<div class="container2">
 				<header class="major">
 					<h2>My Projects</h2>
@@ -226,40 +226,38 @@
 				<header class="major">
 					<h2>Accolades</h2>
 				</header>
-				<div class="accolades">
-					<ul class="accolades-list">
-						<li>
-							<img src="images/accolades/loadingzone.png" class="alt" alt="Loading Zone Spotlight Award">
-							<b>Loading Zone Spotlight Award 2019</b>
-							<span>2nd place award with several games</span>
-						</li>
-						<li>
-							<img src="images/accolades/indieX2019.png" class="alt" alt="Indie X 2019 Finalist">
-							<b>Indie X 2019 Finalist</b>
-							<span>Finalist at Indie X with Heróis do Mar</span>
-						</li>
-						<li>
-							<img src="images/accolades/lusofona.png" class="alt" alt="Accolade 3">
-							<b>Best Concept Award</b>
-							<span>Lusófona's Best Concept Award with Heróis do Mar</span>
-						</li>
-						<li>
-							<img src="images/accolades/indieX2018.png" class="alt" alt="Indie X 2018 Finalist">
-							<b>Indie X 2018 Finalist</b>
-							<span>Finalist at Indie X with Illuminants</span>
-						</li>
-						<li>
-							<img src="images/accolades/fnac.png" class="alt" alt="Accolade 5">
-							<b>Best Game Award</b>
-							<span>FNAC's Best Game Award with Illuminants</span>
-						</li>
-						<li>
-							<img src="images/accolades/lusofona.png" class="alt" alt="Accolade 6">
-							<b>Honorable Mention</b>
-							<span>Lusófona's Honorable Mention with ATMU</span>
-						</li>
-					</ul>
-				</div>
+				<ul class="accolades-list">
+					<li>
+						<img src="images/accolades/loadingzone.png" class="alt" alt="Loading Zone">
+						<b>Loading Zone Spotlight Award 2019</b>
+						<span>2nd place award with several games</span>
+					</li>
+					<li>
+						<img src="images/accolades/indieX2019.png" class="alt" alt="Indie X 2019">
+						<b>Indie X 2019 Finalist</b>
+						<span>Finalist at Indie X with Heróis do Mar</span>
+					</li>
+					<li>
+						<img src="images/accolades/lusofona.png" class="alt" alt="Lusófona">
+						<b>Best Concept Award</b>
+						<span>Lusófona's Best Concept Award with Heróis do Mar</span>
+					</li>
+					<li>
+						<img src="images/accolades/indieX2018.png" class="alt" alt="Indie X 2018">
+						<b>Indie X 2018 Finalist</b>
+						<span>Finalist at Indie X with Illuminants</span>
+					</li>
+					<li>
+						<img src="images/accolades/fnac.png" class="alt" alt="FNAC">
+						<b>Best Game Award</b>
+						<span>FNAC's Best Game Award with Illuminants</span>
+					</li>
+					<li>
+						<img src="images/accolades/lusofona.png" class="alt" alt="Lusófona">
+						<b>Honorable Mention</b>
+						<span>Lusófona's Honorable Mention with ATMU</span>
+					</li>
+				</ul>
 			</div>
 		</section>
 
